Сетка на Гридах Исправление 3

--- a/index.html
+++ b/index.html
@@ -11,114 +11,117 @@
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body class="page-body">
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
-      </a>
-      <div class="main-navigation-wrapper">
+<body>
+  <div class="page-body">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+        </a>
         <ul class="site-navigation">
           <li><a href="blank.html">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
           <li class="current-page"><a href="catalog.html">Гостиницы</a></li>
         </ul>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main class="container">
-    <h1>Описание</h1>
-    <section class="intro">
-      <img class="intro-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456"
-        height="350">
-    </section>
-    <section class="info">
-      <h2 class="info-headline">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="info-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-    </section>
-    <div class="features">
-      <section class="feature">
-        <h2>Настоящий городок</h2>
-        <p class="feature-number">— №1 —</p>
-        <p class="feature-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
+    <main class="container">
+      <h1>Описание</h1>
+      <section class="intro">
+        <img class="intro-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456"
+          height="350">
       </section>
-      <div class="feature-inner-block">
-        <section class="feature-inner">
-          <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
-          <h2>Жильё</h2>
-          <p class="feature-inner-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      <section class="info">
+        <h2 class="info-headline">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="info-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      </section>
+      <div class="features">
+        <section class="feature-first">
+          <div class="feature-city">
+            <h2 class="feature-first-headline">Настоящий городок</h2>
+            <p class="feature-first-number">— №1 —</p>
+            <p class="feature-first-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
+          </div>
         </section>
-        <section class="feature-inner">
-          <img src="img/icons/food.svg" alt="Бургер" width="75" height="72">
-          <h2>Еда</h2>
-          <p class="feature-inner-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+        <div class="feature-inner-block">
+          <section class="feature-inner">
+            <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
+            <h2 class="feature-inner-headline">Жильё</h2>
+            <p class="feature-inner-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </section>
+          <section class="feature-inner">
+            <img src="img/icons/food.svg" alt="Бургер" width="75" height="72">
+            <h2 class="feature-inner-headline">Еда</h2>
+            <p class="feature-inner-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+          </section>
+          <section class="feature-inner">
+            <img src="img/icons/gift.svg" alt="Подарок" width="75" height="72">
+            <h2 class="feature-inner-headline">Сувениры</h2>
+            <p class="feature-inner-text">Не только китайского, но и местного производства</p>
+          </section>
+        </div>
+        <section class="feature-second">
+          <div class="feature-canyon">
+            <img class="feature-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
+            <h2 class="feature-second-headline">Там есть мост дьявола</h2>
+            <p class="feature-second-number">— №2 —</p>
+            <p class="feature-second-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </div>
         </section>
-        <section class="feature-inner">
-          <img src="img/icons/gift.svg" alt="Подарок" width="75" height="72">
-          <h2>Сувениры</h2>
-          <p class="feature-inner-text">Не только китайского, но и местного производства</p>
+        <section class="feature">
+          <h2 class="feature-headline">Небольшая площадь</h2>
+          <p class="feature-number">— №3 —</p>
+          <p class="feature-text">Все достопримечательности нахоядтся очень близко</p>
+        </section>
+        <section class="feature">
+          <h2 class="feature-headline">Красивая дорога</h2>
+          <p class="feature-number">— №4 —</p>
+          <p class="feature-text">ехать в седону из лас-вегаса совсем не скучно!</p>
+        </section>
+        <section class="feature">
+          <h2 class="feature-headline">Мало туристов</h2>
+          <p class="feature-number">— №5 —</p>
+          <p class="feature-text">большинство едет в гранд каньон и толпится там</p>
         </section>
       </div>
-      <section class="feature-canyon">
-        <img class="feature-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
-        <h2>Там есть мост дьявола</h2>
-        <p class="feature-number">— №2 —</p>
-        <p class="feature-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      </section>
-      <section class="feature feature-background-grey">
-        <h2>Небольшая площадь</h2>
-        <p class="feature-number">— №3 —</p>
-        <p class="feature-text">Все достопримечательности нахоядтся очень близко</p>
-      </section>
-      <section class="feature feature-background-grey">
-        <h2>Красивая дорога</h2>
-        <p class="feature-number">— №4 —</p>
-        <p class="feature-text">ехать в седону из лас-вегаса совсем не скучно!</p>
-      </section>
-      <section class="feature feature-background-grey">
-        <h2>Мало туристов</h2>
-        <p class="feature-number">— №5 —</p>
-        <p class="feature-text">большинство едет в гранд каньон и толпится там</p>
-      </section>
-    </div>
-    <section class="book">
-      <h2 class="book-headline">Заинтересовались?</h2>
-      <p class="book-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
-      </p>
-      <a class="button button-search" href="blank.html">Поиск Гостиницы в Седоне</a>
-      <div>
+      <section class="book">
+        <h2 class="book-headline">Заинтересовались?</h2>
+        <p class="book-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
+        </p>
+        <a class="button button-search" href="blank.html">Поиск Гостиницы в Седоне</a>
+        <div>
 
-      </div>
-    </section>
-  </main>
+        </div>
+      </section>
+    </main>
 
-  <footer class="main-footer">
-    <section class="footer-contacts">
-      <h2>Контакты</h2>
-      <p> #visitsedona </p>
-      <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-    </section>
-    <section class="footer-social">
-      <ul>
-        <li>
-          <a class="social-button" href="#">Twitter</a>
-        </li>
-        <li>
-          <a class="social-button" href="#">Facebook</a>
-        </li>
-        <li>
-          <a class="social-button" href="#">Youtube</a>
-        </li>
-      </ul>
-    </section>
-    <section class="footer-copyright">
-      <a class="link-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
-    </section>
-  </footer>
-
+    <footer class="main-footer">
+      <section class="footer-contacts">
+        <h2>Контакты</h2>
+        <p> #visitsedona </p>
+        <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+      </section>
+      <section class="footer-social">
+        <ul class="footer-social">
+          <li>
+            <a class="social-button" href="#">Twitter</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">Facebook</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">Youtube</a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-copyright">
+        <a class="link-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
+      </section>
+    </footer>
+  </div>
 </body>
 
 </html>
