Сетка на гридах, исправления 4

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="page-body">
+  <div class="body-wrap">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
@@ -43,8 +43,8 @@
             <h2 class="feature-first-headline">Настоящий городок</h2>
             <p class="feature-first-number">— №1 —</p>
             <p class="feature-first-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
           </div>
+          <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
         </section>
         <div class="feature-inner-block">
           <section class="feature-inner">
@@ -64,8 +64,8 @@
           </section>
         </div>
         <section class="feature-second">
+          <img class="feature-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
           <div class="feature-canyon">
-            <img class="feature-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
             <h2 class="feature-second-headline">Там есть мост дьявола</h2>
             <p class="feature-second-number">— №2 —</p>
             <p class="feature-second-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
