--- a/catalog.html
+++ b/catalog.html
@@ -11,142 +11,145 @@
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body class="page-body">
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
-      </a>
-      <div class="main-navigation-wrapper">
+<body>
+  <div class="body-wrap">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+        </a>
         <ul class="site-navigation">
           <li><a href="blank.html">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
           <li><a>Гостиницы</a></li>
         </ul>
+      </nav>
+    </header>
+
+    <main class="container">
+      <h1>Каталог</h1>
+      <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+        <fieldset class="form-fieldset">
+          <legend class="form-headline">Инфраструктура:</legend>
+          <ul class="form-list">
+            <li>
+              <input id="pool" type="checkbox" name="pool">
+              <label for="pool">Бассейн</label>
+            </li>
+            <li>
+              <input id="parking" type="checkbox" name="parking">
+              <label for="parking">Парковка</label>
+            </li>
+            <li>
+              <input id="wi-fi" type="checkbox" name="wi-fi">
+              <label for="wi-fi">Wi-Fi</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="form-fieldset">
+          <legend class="form-headline">Тип жилья:</legend>
+          <ul class="form-list">
+            <li>
+              <input id="hotel" type="checkbox" name="hotel">
+              <label for="hotel">Гостиница</label>
+            </li>
+            <li>
+              <input id="motel" type="checkbox" name="motel">
+              <label for="motel">Мотель</label>
+            </li>
+            <li>
+              <input id="apart" type="checkbox" name="apart">
+              <label for="apart">Апартаменты</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="form-fieldset">
+          <legend class="form-headline">Стоимость в сутки, ₽:</legend>
+          <label></label>
+          <p class="cost-content">
+            <input type="text" name="price" placeholder="От 0">
+            <input type="text" name="price" placeholder="До 3000">
+          </p>
+          <p>
+            <input type="range" name="slider">
+          </p>
+          <button class="button button-form" type="submit">Показать</button>
+        </fieldset>
+      </form>
+
+      <section class="sort">
+        <p class="sort-count">Найдено: 3</p>
+        <p class="sort-text">Сортировка</p>
+        <ul class="sort-list">
+          <li><a class="sort-link sort-link-active" href="#">По цене</a></li>
+          <li><a class="sort-link" href="#">По типу</a></li>
+          <li><a class="sort-link" href="#">По рейтингу</a></li>
+        </ul>
+        <ul class="rating-list">
+          <li><a class="sort-arrow sort-arrow-active" href="#">По убыванию</a></li>
+          <li><a class="sort-arrow" href="#">По возрастанию</a></li>
+        </ul>
+      </section>
+      <div class="hotels">
+        <section class="hotel">
+          <img class="hotel-img" src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
+          <div class="hotel-amara">
+            <h2>Amara Resort & Spa</h2>
+            <p class="hotel-text">Гостиница</p>
+            <p class="hotel-item">От 4000 ₽</p>
+            <a class="button button-more" href="blank.html">Подробнее</a>
+            <a class="button button-book" href="blank.html">Забронировать</a>
+            <div class="stars">4 Звезды</div>
+            <p class="rate">Рейтинг: 8,5</p>
+          </div>
+        </section>
+        <section class="hotel-desert">
+          <img class="hotel-img" src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+          <h2>Desert Quail Inn</h2>
+          <p class="hotel-text">Мотель</p>
+          <p class="hotel-item">От 3000 ₽</p>
+          <a class="button button-more" href="blank.html">Подробнее</a>
+          <a class="button button-book" href="blank.html">Забронировать</a>
+          <div class="stars">3 Звезды</div>
+          <p class="rate">Рейтинг: 8,9</p>
+        </section>
+        <section class="hotel-villas">
+          <img class="hotel-img" src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+          <h2>Villas at Poco Diablo</h2>
+          <p class="hotel-text">Апартаменты</p>
+          <p class="hotel-item">От 2000 ₽</p>
+          <a class="button button-more" href="blank.html">Подробнее</a>
+          <a class="button button-book" href="blank.html">Забронировать</a>
+          <div class="stars">2 Звезды</div>
+          <p class="rate">Рейтинг: 9,2</p>
+        </section>
       </div>
-    </nav>
-  </header>
+    </main>
 
-  <main class="container">
-    <h1>Каталог</h1>
-    <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-      <fieldset class="form-fieldset">
-        <legend class="form-headline">Инфраструктура:</legend>
-        <ul class="form-list">
+    <footer class="main-footer">
+      <h2 calss="footer-contacts">Контакты</h2>
+      <p> #visitsedona </p>
+      <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+      </section>
+      <section>
+        <ul class="footer-social">
           <li>
-            <input id="pool" type="checkbox" name="pool">
-            <label for="pool">Бассейн</label>
+            <a class="social-button" href="#">Twitter</a>
           </li>
           <li>
-            <input id="parking" type="checkbox" name="parking">
-            <label for="parking">Парковка</label>
+            <a class="social-button" href="#">Facebook</a>
           </li>
           <li>
-            <input id="wi-fi" type="checkbox" name="wi-fi">
-            <label for="wi-fi">Wi-Fi</label>
+            <a class="social-button" href="#">Youtube</a>
           </li>
         </ul>
-      </fieldset>
-      <fieldset class="form-fieldset">
-        <legend class="form-headline">Тип жилья:</legend>
-        <ul class="form-list">
-          <li>
-            <input id="hotel" type="checkbox" name="hotel">
-            <label for="hotel">Гостиница</label>
-          </li>
-          <li>
-            <input id="motel" type="checkbox" name="motel">
-            <label for="motel">Мотель</label>
-          </li>
-          <li>
-            <input id="apart" type="checkbox" name="apart">
-            <label for="apart">Апартаменты</label>
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="form-fieldset">
-        <legend class="form-headline">Стоимость в сутки, ₽:</legend>
-        <label></label>
-        <p class="cost-content">
-          <input type="text" name="price" placeholder="От 0">
-          <input type="text" name="price" placeholder="До 3000">
-        </p>
-        <p>
-          <input type="range" name="slider">
-        </p>
-        <button class="button button-form" type="submit">Показать</button>
-      </fieldset>
-    </form>
-
-    <section class="sort">
-      <p class="sort-count">Найдено: 3</p>
-      <p class="sort-text">Сортировка</p>
-      <ul class="sort-list">
-        <li><a class="sort-link sort-link-active" href="#">По цене</a></li>
-        <li><a class="sort-link" href="#">По типу</a></li>
-        <li><a class="sort-link" href="#">По рейтингу</a></li>
-      </ul>
-      <ul class="rating-list">
-        <li><a class="sort-arrow sort-arrow-active" href="#">По убыванию</a></li>
-        <li><a class="sort-arrow" href="#">По возрастанию</a></li>
-      </ul>
-    </section>
-    <section class="hotel">
-      <img class="hotel-img" src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
-      <h2>Amara Resort & Spa</h2>
-      <p class="hotel-text">Гостиница</p>
-      <p class="hotel-item">От 4000 ₽</p>
-      <a class="button button-more" href="blank.html">Подробнее</a>
-      <a class="button button-book" href="blank.html">Забронировать</a>
-      <div class="stars">4 Звезды</div>
-      <p class="rate">Рейтинг: 8,5</p>
-    </section>
-    <section class="hotel">
-      <img class="hotel-img" src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
-      <h2>Desert Quail Inn</h2>
-      <p class="hotel-text">Мотель</p>
-      <p class="hotel-item">От 3000 ₽</p>
-      <a class="button button-more" href="blank.html">Подробнее</a>
-      <a class="button button-book" href="blank.html">Забронировать</a>
-      <div class="stars">3 Звезды</div>
-      <p class="rate">Рейтинг: 8,9</p>
-    </section>
-    <section class="hotel">
-      <img class="hotel-img" src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
-      <h2>Villas at Poco Diablo</h2>
-      <p class="hotel-text">Апартаменты</p>
-      <p class="hotel-item">От 2000 ₽</p>
-      <a class="button button-more" href="blank.html">Подробнее</a>
-      <a class="button button-book" href="blank.html">Забронировать</a>
-      <div class="stars">2 Звезды</div>
-      <p class="rate">Рейтинг: 9,2</p>
-    </section>
-  </main>
-
-  <footer class="main-footer">
-    <h2 calss="footer-contacts">Контакты</h2>
-    <p> #visitsedona </p>
-    <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-    </section>
-    <section>
-      <ul class="footer-social">
-        <li>
-          <a class="social-button" href="#">Twitter</a>
-        </li>
-        <li>
-          <a class="social-button" href="#">Facebook</a>
-        </li>
-        <li>
-          <a class="social-button" href="#">Youtube</a>
-        </li>
-      </ul>
-    </section>
-    <section class="footer-copyright">
-      <a class="link-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
-    </section>
-  </footer>
-
+      </section>
+      <section class="footer-copyright">
+        <a class="link-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
+      </section>
+    </footer>
+  </div>
 </body>
 
 </html>
