Гриды каталог Исправление

--- a/catalog.html
+++ b/catalog.html
@@ -94,7 +94,7 @@
       <div class="hotels">
         <section class="hotel">
           <img class="hotel-img" src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
-          <div class="hotel-amara">
+          <div class="hotel-info">
             <h2>Amara Resort & Spa</h2>
             <p class="hotel-text">Гостиница</p>
             <p class="hotel-item">От 4000 ₽</p>
@@ -104,25 +104,29 @@
             <p class="rate">Рейтинг: 8,5</p>
           </div>
         </section>
-        <section class="hotel-desert">
+        <section class="hotel">
           <img class="hotel-img" src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
-          <h2>Desert Quail Inn</h2>
-          <p class="hotel-text">Мотель</p>
-          <p class="hotel-item">От 3000 ₽</p>
-          <a class="button button-more" href="blank.html">Подробнее</a>
-          <a class="button button-book" href="blank.html">Забронировать</a>
-          <div class="stars">3 Звезды</div>
-          <p class="rate">Рейтинг: 8,9</p>
+          <div class="hotel-info">
+            <h2>Desert Quail Inn</h2>
+            <p class="hotel-text">Мотель</p>
+            <p class="hotel-item">От 3000 ₽</p>
+            <a class="button button-more" href="blank.html">Подробнее</a>
+            <a class="button button-book" href="blank.html">Забронировать</a>
+            <div class="stars">3 Звезды</div>
+            <p class="rate">Рейтинг: 8,9</p>
+          </div>
         </section>
-        <section class="hotel-villas">
+        <section class="hotel">
           <img class="hotel-img" src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
-          <h2>Villas at Poco Diablo</h2>
-          <p class="hotel-text">Апартаменты</p>
-          <p class="hotel-item">От 2000 ₽</p>
-          <a class="button button-more" href="blank.html">Подробнее</a>
-          <a class="button button-book" href="blank.html">Забронировать</a>
-          <div class="stars">2 Звезды</div>
-          <p class="rate">Рейтинг: 9,2</p>
+          <div class="hotel-info">
+            <h2>Villas at Poco Diablo</h2>
+            <p class="hotel-text">Апартаменты</p>
+            <p class="hotel-item">От 2000 ₽</p>
+            <a class="button button-more" href="blank.html">Подробнее</a>
+            <a class="button button-book" href="blank.html">Забронировать</a>
+            <div class="stars">2 Звезды</div>
+            <p class="rate">Рейтинг: 9,2</p>
+          </div>
         </section>
       </div>
     </main>
