Сетка внутренней страницы на флексах

--- a/blank.html
+++ b/blank.html
@@ -7,26 +7,25 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
   <link href="normalize.css" rel="stylesheet">
-  <link href='css /style.css' rel="stylesheet">
+  <link href='css/style.css' rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body class="page-body">
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
-      </a>
-      <div class="main-navigation-wrapper">
+<body>
+  <div class="body-wrap">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+        </a>
         <ul class="site-navigation">
           <li><a href="blank.html">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
           <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
   <footer class="main-footer">
     <h2 calss="footer-contacts">Контакты</h2>
