--- a/catalog.html
+++ b/catalog.html
@@ -93,38 +93,56 @@
       </section>
       <div class="hotels">
         <section class="hotel">
-          <img class="hotel-img" src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
+          <div class="hotel-img">
+            <img src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
+          </div>
           <div class="hotel-info">
             <h2>Amara Resort & Spa</h2>
+            <div class="hotel-price-from">
             <p class="hotel-text">Гостиница</p>
             <p class="hotel-item">От 4000 ₽</p>
+            </div>
             <a class="button button-more" href="blank.html">Подробнее</a>
             <a class="button button-book" href="blank.html">Забронировать</a>
-            <div class="stars">4 Звезды</div>
+          </div>
+          <div class="rating">
+            <p class="stars">4 Звезды</p>
             <p class="rate">Рейтинг: 8,5</p>
           </div>
         </section>
         <section class="hotel">
-          <img class="hotel-img" src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+          <div class="hotel-img">
+            <img src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+          </div>
           <div class="hotel-info">
             <h2>Desert Quail Inn</h2>
+            <div class="hotel-price-from">
             <p class="hotel-text">Мотель</p>
             <p class="hotel-item">От 3000 ₽</p>
+            </div>
             <a class="button button-more" href="blank.html">Подробнее</a>
             <a class="button button-book" href="blank.html">Забронировать</a>
-            <div class="stars">3 Звезды</div>
+          </div>
+          <div class="rating">
+            <p class="stars">3 Звезды</p>
             <p class="rate">Рейтинг: 8,9</p>
           </div>
         </section>
         <section class="hotel">
-          <img class="hotel-img" src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+          <div class="hotel-img">
+            <img src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+          </div>
           <div class="hotel-info">
             <h2>Villas at Poco Diablo</h2>
+            <div class="hotel-price-from">
             <p class="hotel-text">Апартаменты</p>
             <p class="hotel-item">От 2000 ₽</p>
+            </div>
             <a class="button button-more" href="blank.html">Подробнее</a>
             <a class="button button-book" href="blank.html">Забронировать</a>
-            <div class="stars">2 Звезды</div>
+          </div>
+          <div class="rating">
+            <p class="stars">2 Звезды</p>
             <p class="rate">Рейтинг: 9,2</p>
           </div>
         </section>
