--- a/catalog.html
+++ b/catalog.html
@@ -150,11 +150,12 @@
     </main>
 
     <footer class="main-footer">
-      <h2 calss="footer-contacts">Контакты</h2>
-      <p> #visitsedona </p>
-      <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+      <section class="footer-contacts">
+        <h2>Контакты</h2>
+        <p> #visitsedona </p>
+        <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
       </section>
-      <section>
+      <section class="footer-social">
         <ul class="footer-social">
           <li>
             <a class="social-button" href="#">Twitter</a>
