--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       </div>
       <section class="book">
         <h2 class="book-headline">Заинтересовались?</h2>
-        <p class="book-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
+        <p class="book-text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в
+          седоне
         </p>
         <a class="button button-search" href="blank.html">Поиск Гостиницы в Седоне</a>
         <div class="map">
