Дек элементы Каталог Исправления

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer footer-transparent">
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p> #visitsedona </p>
