--- a/blank.html
+++ b/blank.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
 
-    <footer class="main-footer">
+    <footer class="main-footer footer-transparent" >
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p> #visitsedona </p>
