--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
           <li><a href="blank.html">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
-          <li><a>Гостиницы</a></li>
+          <li class="current-page">Гостиницы</li>
         </ul>
       </nav>
     </header>
@@ -70,12 +70,14 @@
           <legend class="form-headline">Стоимость в сутки, ₽:</legend>
           <div class="range-filter">
             <div class="price-controls">
-              <label class="min-price"> ОТ
-                <input type="number" name="min-price" value="0" placeholder="0">
-              </label>
-              <label class="max-price"> ДО
-                <input type="number" name="max-price" value="3000" placeholder="3000">
-              </label>
+              <div class="min-controls">
+                <label class="min-price" for="price-from">ОТ</label>
+                <input type="number" id="price-from" name="min-price" value="0" placeholder="0">
+              </div>
+              <div class="max-controls">
+                <label class="max-price" for="price-to">ДО</label>
+                <input type="number" id="price-to" class="inputcontrols" name="max-price" value="3000" placeholder="3000">
+              </div>
               <div class="range-controls">
                 <div class="scale">
                   <div class="bar"></div>
