Дек элементы каталог Исправления 5

--- a/catalog.html
+++ b/catalog.html
@@ -71,12 +71,10 @@
           <div class="range-filter">
             <div class="price-controls">
               <div class="min-controls">
-                <label class="min-price" for="price-from">ОТ</label>
-                <input type="number" id="price-from" name="min-price" value="0" placeholder="0">
+                <span class="min-price">ОТ 0</span>
               </div>
               <div class="max-controls">
-                <label class="max-price" for="price-to">ДО</label>
-                <input type="number" id="price-to" class="inputcontrols" name="max-price" value="3000" placeholder="3000">
+                <span class="max-price">ДО 3000</span>
               </div>
               <div class="range-controls">
                 <div class="scale">
