Завершаем вёрстку главной страницы
Исправления 2

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
   <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
@@ -115,7 +115,7 @@
             <img src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
           </div>
           <div class="hotel-info">
-            <h2>Amara Resort & Spa</h2>
+            <h2 class="hotel-headline"><a href="#">Amara Resort & Spa</a></h2>
             <div class="hotel-price-from">
               <p class="hotel-text">Гостиница</p>
               <p class="hotel-item">От 4000 ₽</p>
@@ -133,7 +133,7 @@
             <img src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
           </div>
           <div class="hotel-info">
-            <h2>Desert Quail Inn</h2>
+            <h2 class="hotel-headline"><a href="#">Desert Quail Inn</a></h2>
             <div class="hotel-price-from">
               <p class="hotel-text">Мотель</p>
               <p class="hotel-item">От 3000 ₽</p>
@@ -151,7 +151,7 @@
             <img src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
           </div>
           <div class="hotel-info">
-            <h2>Villas at Poco Diablo</h2>
+            <h2 class="hotel-headline"><a href="#">Villas at Poco Diablo</a></h2>
             <div class="hotel-price-from">
               <p class="hotel-text">Апартаменты</p>
               <p class="hotel-item">От 2000 ₽</p>
