Завершение верстки каталог

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70">
         </a>
         <ul class="site-navigation">
           <li><a href="blank.html">Информация</a></li>
@@ -39,7 +39,7 @@
               <label for="pool">Бассейн</label>
             </li>
             <li class="form-option">
-              <input class="visually-hidden form-input-checkbox" class="visually-hidden" id="parking" type="checkbox" name="parking">
+              <input class="visually-hidden form-input-checkbox" id="parking" type="checkbox" name="parking">
               <label for="parking">Парковка</label>
             </li>
             <li class="form-option">
