--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70">
         </a>
         <ul class="site-navigation">
           <li><a href="blank.html">Информация</a></li>
@@ -31,8 +31,7 @@
     <main class="container">
       <h1 class="visually-hidden">Описание</h1>
       <section class="intro">
-        <img class="intro-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456"
-          height="350">
+        <img class="intro-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
       </section>
       <section class="info">
         <h2 class="info-headline">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
