--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img class="intro-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
       </section>
       <section class="info">
-        <h2 class="info-headline">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <h2 class="info-headline">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="info-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </section>
       <div class="features">
