--- a/blank.html
+++ b/blank.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70">
+          <img src="img/logo.svg" width="138" height="70" alt="Логотип город Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="blank.html">Информация</a></li>
