--- a/catalog.html
+++ b/catalog.html
@@ -99,11 +99,11 @@
           <li><a class="sort-link" href="#">По рейтингу</a></li>
         </ul>
         <ul class="rating-list">
-          <li><a class="sort-arrow" href="#" aria-label="ascending sort">
+          <li><a class="sort-arrow" href="#" aria-label="по возрастанию">
             <svg width="11" height="10" viewBox="0 0 11 10" xmlns="http://www.w3.org/2000/svg"> <path d="M5.5 0L0 10H11L5.5 0Z" /></svg>
           </a></li>
           <li>
-            <a class="sort-arrow sort-arrow-active" href="#" aria-label="descending sort">
+            <a class="sort-arrow sort-arrow-active" href="#" aria-label="по убыванию">
               <svg width="11" height="10" viewBox="0 0 11 10" xmlns="http://www.w3.org/2000/svg"> <path d="M5.5 10L0 0H11"/></svg>
             </a>
           </li>
