--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
           <img src="img/logo.svg" width="138" height="70" alt="Логотип город Седона">
         </a>
         <ul class="site-navigation">
-          <li><a href="blank.html">Информация</a></li>
+          <li><a href="blank.html" class="nav-active">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
           <li><a>Гостиницы</a></li>
